# StateMachine

./: Accumulator.h  CMakeLists.txt  Delay.h  Negative.h  Positive.h  StateMachine.h  main.cpp
Elementary/: Accumulator.h  Delay.h  Increment.h  PureFunction.h
Operators/: Cascade.h  Feedback.h  Parallel.h  Repeat.h  Sequence.h  Switch.h
Utils/: Pair.h  optional.h
